--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                         <div class="overflow-hidden mb-4">
                             <img class="img-fluid" src="img/team-2.jpg" alt="">
                         </div>
-                        <h5 class="mb-0">Sarah Lee</h5>
+                        <h5 class="mb-0">James</h5>
                         <p>Operations Manager</p>
                         <div class="btn-slide mt-1">
                             <i class="fa fa-share"></i>
