--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <div class="row g-5 mx-lg-0">
                 <div class="col-lg-6 feature-text wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="text-secondary text-uppercase mb-3">Our Features</h6>
-                    <h1 class="mb-5">We Are Trusted Logistics Company Since 1990</h1>
+                    <h1 class="mb-5">We Are Trusted Logistics Company Since 2015</h1>
                     <div class="d-flex mb-5 wow fadeInUp" data-wow-delay="0.3s">
                         <i class="fa fa-globe text-primary fa-3x flex-shrink-0"></i>
                         <div class="ms-4">
@@ -306,13 +306,13 @@
                 <h6 class="text-secondary text-uppercase">Our Team</h6>
                 <h1 class="mb-5">Expert Team Members</h1>
             </div>
-            <div class="row g-4">
+            <div class="row g-4 justify-content-center align-items-center">
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item p-4">
                         <div class="overflow-hidden mb-4">
-                            <img class="img-fluid" src="img/team-1.jpg" alt="">
+                            <img class="img-fluid" src="./img/shahzaib.jpeg" alt="">
                         </div>
-                        <h5 class="mb-0">John Smith</h5>
+                        <h5 class="mb-0">Paul ford</h5>
                         <p>CEO</p>
                         <div class="btn-slide mt-1">
                             <i class="fa fa-share"></i>
@@ -327,9 +327,9 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item p-4">
                         <div class="overflow-hidden mb-4">
-                            <img class="img-fluid" src="img/team-2.jpg" alt="">
+                            <img class="img-fluid" src="./img/adnan.jpg" alt="">
                         </div>
-                        <h5 class="mb-0">James</h5>
+                        <h5 class="mb-0">Danny</h5>
                         <p>Operations Manager</p>
                         <div class="btn-slide mt-1">
                             <i class="fa fa-share"></i>
@@ -341,7 +341,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                <!-- <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="team-item p-4">
                         <div class="overflow-hidden mb-4">
                             <img class="img-fluid" src="img/team-3.jpg" alt="">
@@ -363,7 +363,7 @@
                         <div class="overflow-hidden mb-4">
                             <img class="img-fluid" src="img/team-4.jpg" alt="">
                         </div>
-                        <h5 class="mb-0"> Davis</h5>
+                        <h5 class="mb-0">Monica</h5>
                         <p>Customer Support Lead</p>
                         <div class="btn-slide mt-1">
                             <i class="fa fa-share"></i>
@@ -374,7 +374,7 @@
                             </span>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
