--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                             <img class="img-fluid" src="./img/shahzaib.jpeg" alt="">
                         </div>
                         <h5 class="mb-0">Paul ford</h5>
-                        <p>Managing director</p>
+                        <p>Managing Director</p>
                         <div class="btn-slide mt-1">
                             <i class="fa fa-share"></i>
                             <span>
