--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                         <div class="overflow-hidden mb-4">
                             <img class="img-fluid" src="./img/shahzaib.jpeg" alt="">
                         </div>
-                        <h5 class="mb-0">Paul ford</h5>
+                        <h5 class="mb-0">Paul Ford</h5>
                         <p>Managing Director</p>
                         <div class="btn-slide mt-1">
                             <i class="fa fa-share"></i>
